<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="10dp"
        android:paddingTop="20dip"
        android:shrinkColumns="1"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/header_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_register"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/header_personal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_personal"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/register_name"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/register_name"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/register_username"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/register_username"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/register_email"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/register_email"
                android:inputType="textEmailAddress" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/register_password"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/register_password"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/register_confirmPassword"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/register_confirmPassword"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/register_nif"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/register_nif"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            android:layout_marginTop="10dp"

            <TextView
                android:id="@+id/header_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_card"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/register_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_type"
                android:textColor="?android:textColorHint"
                android:textSize="22sp" />

            <RadioGroup
                android:id="@+id/register_cardType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rb_visa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_visa" />

                <RadioButton
                    android:id="@+id/rb_sit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_masterCard" />

                <RadioButton
                    android:id="@+id/rb_delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_americanExpress" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/register_cardNumber"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/register_cardNumber"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/register_cardValidity"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/register_cardValidity"
                android:inputType="number" />
        </TableRow>

        <Button
            android:id="@+id/register_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/register_button"/>

    </TableLayout>
</ScrollView>

